--- a/App/package.json
+++ b/App/package.json
@@ -13,10 +13,12 @@
     "@emotion/is-prop-valid": "^1.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mapbox/mapbox-gl-draw": "^1.4.2",
     "@mui/material": "^5.14.1",
     "@mui/x-data-grid": "^6.10.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "mapbox-gl": "^1.13.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
