--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@tomtom-international/web-sdk-services": "^6.23.0",
     "axios": "^1.4.0",
     "icons": "^1.0.0",
+    "mapbox-gl": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-map-gl": "^7.1.3",
     "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-css": "^1.0.4"
   }
 }
