--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-map-gl": "^7.1.3",
-    "react-router-dom": "^6.12.1"
+    "react-router-dom": "^6.12.1",
+    "vite-plugin-pwa": "^0.16.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
